--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,8 @@ target_link_libraries(pacman PRIVATE ${SDL2_LIBRARIES})
 target_sources(pacman PRIVATE GameState.cpp GridObject.cpp util.cpp)
 
 add_custom_target(format
-    COMMAND clang-format -i *.cpp *.hpp
+    COMMAND clang-format -i ${PROJECT_SOURCE_DIR}/*.cpp ${PROJECT_SOURCE_DIR}/*.hpp
     COMMENT "Running clang-format")
 add_custom_target(check-format
-    COMMAND clang-format --dry-run *.cpp *.hpp
+    COMMAND clang-format --dry-run ${PROJECT_SOURCE_DIR}/*.cpp ${PROJECT_SOURCE_DIR}/*.hpp
     COMMENT "Running clang-format --dry-run")
